--- a/index.html
+++ b/index.html
@@ -11,58 +11,44 @@
   <title>Frontend Mentor | Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+  <style>
+
+  </style>
 </head>
 
 <body>
-  <div class="container">
-    <div class="hero">
-      <img src="images/illustration-hero.svg" alt="Hero">
-    </div>
-    <div class="text-content">
-      <h2 class="title">
-        Order Summary
-      </h2>
-      <p class="subtitle">
-        You can now listen to millions of songs, audiobooks, and podcasts on any
-        device anywhere you like!
-      </p>
-      <div class="plan-box">
-        <div class="plan-box-left">
-          <img src="images/icon-music.svg" alt="" srcset="">
-          <div>
-            <h5>Annual Plan</h5>
-            <p>$59.99/year</p>
-          </div>
-        </div>
-        <a href="#">Change</a>
+  <div class="main-container">
+
+    <div class="container">
+      <div class="hero">
+        <img src="./images/illustration-hero.svg">
       </div>
-      <a href="" class="proceed-btn"> Proceed to Payment </a>
-      <a href="" class="cancle-btn"> Cancel Order </a>
+      <div class="text-content">
+        <h2 class="title">Order Summary</h2>
+        <p class="subtitle">
+          You can now listen to millions of songs, audiobooks, and podcasts on any
+          device anywhere you like!
+        </p>
+        <div class="plan-box">
+          <div class="plan-box-left">
+            <img src="images/icon-music.svg">
+            <div>
+              <h5>Annual Plan</h5>
+              <p>$69.99/year</p>
+            </div>
+          </div>
+          <a href="#">Change</a>
+        </div>
+        <a href="#" class="proceed-btn">Proceed to Payment</a>
+        <a href="#" class="cancle-btn">Cancle Order</a>
+      </div>
     </div>
   </div>
 
 
-
-
-
-  <!-- Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order -->
-
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Avinash Shukla</a>.
+    Coded by <a href="https://github.com/Luci04">Avinash Shukla</a>.
   </div>
 </body>
 
